# riscv-toolchain

./: CMakeLists.txt  Readme.md  bios.sh  boot.asm  disk.sh  first.udo  loop1.asm  notes.txt  os1.sh  program.asm  run.sh
as/: CMakeLists.txt  Readme.md  test.asm  test.sh
as/src/: CMakeLists.txt  lex.cpp  lex.hpp  main.cpp  pass1.cpp  pass1.hpp  pass2.cpp  pass2.hpp
as/test/: br1.asm  br1.out  br2.asm  br2.out  float1.asm  float1.out  float2.out  itest1.asm  itest1.out  itest2.asm  itest2.out  jal1.asm  jal1.out  jalr1.asm  jalr1.out  load1.asm  load1.out  store1.asm  store1.out  test1.asm  test1.out  test2.asm  test2.out  uj1.asm  uj1.out
disk/: format.txt
os/: bin1.asm  boot.asm  kernel.asm
os/bios/: bios.asm  entry1.asm
os/os1/: bin1.asm
programs/: disk1.asm  simple.asm
sim/: CMakeLists.txt  bus.cpp  bus.hpp  config.hpp  cpu.cpp  cpu.hpp  debug.cpp  display.cpp  display.hpp  hdd.cpp  hdd.hpp  main.cpp  ram.cpp  ram.hpp  run.cpp  run.hpp
udo/: CMakeLists.txt  main.cpp
